# python-tool-template

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/package_name/: __init__.py
